--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" type="image/png" href="favicon.png">
     <title>MyFantastic Service Maintenance</title>
     <link rel="stylesheet" href="style.css">
 </head>
@@ -238,6 +239,7 @@
     </script>
 </body>
 </html>
+
 
 
 
