--- a/password.html
+++ b/password.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login - Service Reports</title>
+    <link rel="icon" type="image/png" href="favicon.png">
     <link rel="stylesheet" href="styles.css">
 </head>
 <body class="password-page">
@@ -213,3 +214,4 @@
     </script>
 </body>
 </html>
+
