--- a/fan-selection.html
+++ b/fan-selection.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Select Fan</title>
+    <link rel="icon" type="image/png" href="favicon.png">
     <link rel="stylesheet" href="styles.css">
 </head>
 <body class="fan-selection-page">
@@ -188,3 +189,4 @@
     </script>
 </body>
 </html>
+
