--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                     
                     <!-- Welcome Message -->
                     <div class="welcome-message">
-                        <p><strong>The smart way to manage your services. Easily check your service reports, track expired or upcoming due dates, and stay updated in real time. Simple, fast, and reliable — all in one platform. Keep tracking with us</strong></p>
+                        <p><strong>The smart way to manage your services. Easily check your service reports, track expired or upcoming due dates, and stay updated in real time. Simple, fast, and reliable — all in one platform. Keep tracking with us.</strong></p>
                     </div>
                 </div>
             </div>
@@ -170,5 +170,6 @@
     </script>
 </body>
 </html>
+
 
 
